Fixed: Author archive not being aligned

--- a/site-sass/site-specific/site.archive.scss
+++ b/site-sass/site-specific/site.archive.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   height: 600px;
   max-width: 1220px;
+  margin: 0 auto;
   margin-bottom: 20px;
 
   @include mq($until:desktop) {
